--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Here is my Git Heading</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo earum ullam assumenda amet, facilis rem distinctio, asperiores numquam fuga enim soluta, similique cumque. Tempore, blanditiis officia voluptates, nemo ab tenetur autem sequi optio aliquam asperiores numquam quasi, dolore illo quos.</p>
 </body>
 </html>
